examples/test/testpolicy7407.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7407
  namespace: namespace189
spec:
  podSelector:
    matchLabels:
      key35: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value18
          key18: value42
          key12: value5
      podSelector:
        matchLabels:
          key27: value34
          key46: value48
